<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/system">

        <menu>

            <item
                    android:id="@+id/nav_load"
                    android:icon="@mipmap/icon_27"
                    android:title="@string/download" />

            <item
                    android:id="@+id/nav_home"
                    android:icon="@mipmap/icon_26"
                    android:title="@string/upload" />
        </menu>
    </item>

    <item android:title="@string/account">

        <menu>
            <item
                    android:id="@+id/nav_login"
                    android:icon="@mipmap/icon_7"
                    android:title="@string/our_login" />
        </menu>
    </item>

</menu>
